--- a/frontend/src/components/DeviceCard/style.css
+++ b/frontend/src/components/DeviceCard/style.css
@@ -1,13 +1,12 @@
 .device-container {
     width: 300px;
+    padding: 20px;
     box-sizing: border-box;
-    background: var(--primary-color);
-    border: 1px solid var(--primary-stroke-color);
+    background: var(--secondary-color);
+    color: var(--grey);
     box-shadow: 0px 0px 49px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
 }
-
-
 
 .device-container .device-name {
     font-size: 16px;
@@ -17,7 +16,6 @@
     letter-spacing: 0.65px;
     color: var(--white);
 }
-
 
 /* 
 
