--- a/frontend/src/components/NavigationBar/style.css
+++ b/frontend/src/components/NavigationBar/style.css
@@ -1,55 +1,67 @@
 :root {
-    --sidebar-width: 65px;
+    --sidebar-width: 200px;
+    --page-content-margin: 20px;
 }
 
 .page-container {
+    background-color: var(--primary-color);
+    box-sizing: border-box;
+    border-radius: 2em;
     display: flex;
-    margin: 10px;
+    margin: var(--page-content-margin);
+    height: calc(100vh - 2*var(--page-content-margin));
+}
+
+.content-container {
+    flex-grow: 1;
+    margin-left: calc(var(--sidebar-width) + var(--page-content-margin) * 2);
+    border-left: var(--secondary-color) 1px solid;
 }
 
 .content {
-    flex-grow: 1;
-    margin-left: calc(var(--sidebar-width) + 20px);
+    margin: calc(var(--page-content-margin) * 2) calc(var(--page-content-margin) * 4);
 }
 
 .navbar-container {
-    background-color: var(--primary-color);
-    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-    border: 1px solid var(--primary-stroke-color);
-    box-shadow: 0px 0px 49px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
+    align-items: flex-start;
+    justify-content: flex-start;
 
-    max-width: var(--sidebar-width);
-    height: calc(100vh - 20px);
-    margin: 10px;
+    width: var(--sidebar-width);
+    margin: calc(var(--page-content-margin)*2);
+
     position: fixed;
-    top: 0px;
-    left: 0px;
+    top: var(--page-content-margin);
+    left: var(--page-content-margin);
 }
 
 .navbar-container a {
-    margin: 20px;
+    color: var(--grey);
+    margin-top: 20px;
+}
+
+.navbar-container a img {
+    width: 20px;
 }
 
 .logo-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding: 10px;
+    margin-bottom: var(--page-content-margin);
 }
 
 .logo-container .logo-img {
-    width: 50px;
-    padding: 10px;
+    width: 30px;
+    margin-right: 10px;
 }
 
 .logo-container .logo-label {
-    color: var(--grey);
-    font-size: 0.75rem;
-    font-family: 'Inter-Medium';
+    color: var(--white);
+    font-size: 1.2rem;
+    font-family: 'Inter-SemiBold';
+    text-transform: uppercase;
+    letter-spacing: 3px;
 }
