--- a/frontend/src/components/DevicesTable/style.css
+++ b/frontend/src/components/DevicesTable/style.css
@@ -1,42 +1,40 @@
-.table-container {
-    width: 70%;
-    height: inherit;
-    padding: 20px;
-    box-sizing: border-box;
-    background: var(--secondary-color);
+.custom-datagrid {
+    border: none !important;
+    color: var(--white);
+    background-color: transparent;
+}
+
+.custom-datagrid .MuiDataGrid-footerContainer,
+.custom-datagrid .MuiDataGrid-columnHeaders,
+.custom-datagrid .MuiDataGrid-cell {
+    border: none !important;
+}
+
+.custom-datagrid .MuiDataGrid-columnHeaderTitle {
     color: var(--grey);
-    box-shadow: 0px 0px 49px rgba(0, 0, 0, 0.25);
-    border-radius: 2rem;
 }
 
-.table-container .subtitle {
-    color: var(--grey);
+.MuiDataGrid-panel *,
+.MuiDataGrid-menu * {
+    color: var(--primary-color) !important;
 }
 
-.table-top-row {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+.custom-datagrid .hyper-link {
+    color: var(--accent-color);
+    cursor: pointer;
 }
 
-.table-header {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+.available-status,
+.unavailable-status {
+    border-radius: 1rem;
+    padding: 4px 12px;
+    background-color: var(--primary-color);
 }
 
-.table-tools {
-    margin-left: auto;
-    margin-right: 20px;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-start;
+.available-status {
+    color: var(--green);
 }
 
-.table-tools svg {
-    margin-right: 10px;
-}
-
-.table-content {
-    height: 100%;
+.unavailable-status {
+    color: var(--red);
 }
